# mcp

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  Architecture.mmd  AutoSync.mmd  CONTRIBUTING.md  Cargo.toml  GOAL.md  Makefile  README.md  REPO_STRUCTURE.md  SCHEMA.md  WebhookSync.mmd  affected.py  ameliso.py  buf.gen.yaml  config_dev.go  config_release.go  cspell.json  docker-compose.yml  go.mod  go.sum  main.go  main_test.go  new.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  report.py  search.py  start.sh  update_run.py  validate.py
.ameliso/suites/: creation.yaml  imports.yaml
.centy/: .centy-manifest.json  .gitignore  config.json  cspell.json
.centy/archived/: config.yaml
.centy/comments/: config.yaml
.centy/docs/: testing-strategy.md  testmo-csv-field-mapping.md
.centy/epics/: config.yaml  edb6f36e-ef4c-477b-a7f9-0df49bd890fa.md
.centy/issues/: 014b1038-0f0e-4000-9e29-7eb9617e0124.md  06f9ad47-d999-4059-81ad-395b1696110a.md  0b542454-29b6-4e17-aaf2-25b93907759e.md  1dc40ebf-46f5-4705-80fa-1be51af5dd06.md  23fd84f9-043a-442d-9a9e-b2bca52f9721.md  2828340d-8f4b-4bcc-a0d3-ea15a6579062.md  28ae8bf7-abc6-445e-8d1d-24e1e7e83afb.md  2d2db5a7-bc69-4d05-b718-a70f1ae58656.md  30f9ac37-498a-4efb-94c2-318dd6b7b6f7.md  38d83b36-74f0-4007-aadf-a6cff2c0baed.md  3f48ea39-3c29-4cad-b20b-698d311a96f6.md  42446450-347e-4ebf-ae10-321eeecbde77.md  447417f0-c7ab-4148-8f23-dbd2cb118540.md  4a7c993b-dec1-4986-9707-92f67efd581a.md  4af49c3e-42a0-4cde-ae99-3b47f69b954d.md  4c659d78-eaad-4536-9476-85952b9768d0.md  4cbf9284-f138-4af3-9673-70d2428d27a8.md  4d76e2e3-040b-4df7-8a70-36d262d0488f.md  4ff976dd-5e0e-475a-8d45-56d53b794d37.md  506eb099-ce88-4380-b29d-aa3c224ce380.md  (+68 more)
.claude/: .gitignore  settings.json
.githooks/: pre-commit  pre-push
cli/: Cargo.toml
cli/src/: main.rs
docs/: github-app-setup.md
mcp/: Cargo.toml
mcp/src/: main.rs
server/: .env.example  .gitignore  Cargo.toml  README.md  buf.gen.yaml  build.rs
server/.claude/: ralph-loop.local.md
server/.husky/: pre-push
server/migrations/: 001_initial.sql  002_run_cases.sql  003_indexes.sql  004_run_commit_sha.sql
server/proto/ameliso/v1/: service.proto  types.proto
server/src/: db.rs  git.rs  github.rs  lib.rs  main.rs  proto.rs  repo.rs  repos_store.rs  service.rs  sync.rs  webhook.rs
server/src/repo/: mod.rs  tests.rs
server/src/service/: bulk_create_cases.rs  bulk_create_cases_test.rs  bulk_delete_cases.rs  bulk_delete_cases_test.rs  bulk_record_results.rs  bulk_record_results_test.rs  bulk_update_cases.rs  bulk_update_cases_test.rs  create_case.rs  create_case_test.rs  create_run.rs  create_run_test.rs  create_suite.rs  create_suite_test.rs  delete_case.rs  delete_case_test.rs  delete_run.rs  delete_run_test.rs  delete_suite.rs  delete_suite_test.rs  finalize_run.rs  finalize_run_test.rs  get_affected_cases.rs  get_affected_cases_test.rs  get_case.rs  get_case_test.rs  get_coverage_report.rs  get_coverage_report_test.rs  get_git_hub_install_url_test.rs  get_pending_cases.rs  get_pending_cases_test.rs  get_repo_status.rs  get_repo_status_test.rs  get_run.rs  get_run_test.rs  get_suite.rs  get_suite_test.rs  handle_git_hub_callback.rs  handle_git_hub_callback_test.rs  helpers_test.rs  (+20 more)
server/tests/: integration.rs
src/: main.rs  repo.rs  service.rs
suites/: smoke.yaml
test-cases/: TC-001-example-login.md
test-runs/: RUN-001-2026-04-21.md
web/: .dockerignore  .env.local.example  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.mjs  index.html  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  tsconfig.test.json  tsconfig.test.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+398 files in other folders)
