[package]
name = "ameliso-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ameliso-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
