[workspace]

[package]
name = "ameliso"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ameliso"
path = "src/main.rs"

[dependencies]
ameliso-server = { path = "../server" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", default-features = false, features = ["channel"] }
futures = "0.3"
