[workspace]

[package]
name = "ameliso-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ameliso-mcp"
path = "src/main.rs"

[dependencies]
ameliso-server = { path = "../server" }
rmcp = { version = "1.5", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tonic = { version = "0.12", default-features = false, features = ["channel"] }
futures = "0.3"
