[package]
name = "ameliso-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ameliso-server"
path = "src/main.rs"

[lib]
name = "ameliso_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-web = "0.12"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
