[package]
name = "ameliso-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ameliso-server"
path = "src/main.rs"

[lib]
name = "ameliso_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
prost = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-web = "0.12"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
